--- a/EnglishTraining/Speaking/01-Part01.md
+++ b/EnglishTraining/Speaking/01-Part01.md
@@ -1,4 +1,6 @@
-![[OIG1.jpeg]]
+![sample](https://raw.githubusercontent.com/MKarimi21/mr-karimi.ir/main/docs/images/OIG1.jpeg)
+
+
 ## There are understandable reasons why arguments occur about language
 
 - [ ] 100:
