update and finish part 01 of speaking

--- a/EnglishTraining/Speaking/01-Part01.md
+++ b/EnglishTraining/Speaking/01-Part01.md
@@ -7,3 +7,20 @@
 		There are understandable reasons why
 		arguments occur 
 		about language
+
+
+---
+
+![OGI02](https://raw.githubusercontent.com/MKarimi21/mr-karimi.ir/30ade554a70f46b7959161ded927c69d38f82cba/docs/images/OGI2.png)
+
+## Our assessment of a person's intelligence is affected by the way he or she uses language
+
+- [ ] 100;
+		Our assessment of a person's intelligence 
+		is affected by
+		the way he or she uses language
+
+
+> [!NOTE] ترجمه
+> ارزیابی ما از هوش افراد <font color="#c00000">*|*</font> از نحوه <font color="#c00000">*|*</font> استفاده آن‌ها از زبان تاثیر می‌گیرد.
+
